[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tilemaps/living_kitchen.tsx" type="TileSet" id=1]
[ext_resource path="res://Player_Components/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ApartmentKitchen.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 36 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 40 )

[node name="ApartmentKitchen" type="Node2D"]
script = ExtResource( 3 )

[node name="Layer 1" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 24, 0, 1, 25, 0, 2, 25, 0, 3, 25, 0, 4, 25, 0, 5, 25, 0, 6, 25, 0, 7, 25, 0, 8, 25, 0, 9, 25, 0, 10, 26, 0, 12, 0, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 2, 0, 65536, 28, 0, 65537, 29, 0, 65538, 29, 0, 65539, 29, 0, 65540, 29, 0, 65541, 29, 0, 65542, 29, 0, 65543, 29, 0, 65544, 29, 0, 65545, 29, 0, 65546, 30, 0, 65547, 27, 0, 65548, 4, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 6, 0, 131072, 36, 0, 131073, 37, 0, 131074, 37, 0, 131075, 37, 0, 131076, 37, 0, 131077, 37, 0, 131078, 37, 0, 131079, 37, 0, 131080, 37, 0, 131081, 37, 0, 131082, 38, 0, 131083, 41, 0, 131084, 19, 0, 131085, 20, 0, 131086, 20, 0, 131087, 20, 0, 131088, 20, 0, 131089, 20, 0, 131090, 20, 0, 131091, 20, 0, 131092, 20, 0, 131093, 20, 0, 131094, 21, 0, 196608, 51, 0, 196609, 52, 0, 196610, 52, 0, 196611, 52, 0, 196612, 52, 0, 196613, 52, 0, 196614, 52, 0, 196615, 52, 0, 196616, 52, 0, 196617, 52, 0, 196618, 52, 0, 196619, 39, 0, 196620, 48, 0, 196621, 49, 0, 196622, 49, 0, 196623, 49, 0, 196624, 49, 0, 196625, 49, 0, 196626, 49, 0, 196627, 49, 0, 196628, 49, 0, 196629, 49, 0, 196630, 49, 0, 262144, 63, 0, 262145, 64, 0, 262146, 64, 0, 262147, 64, 0, 262148, 64, 0, 262149, 64, 0, 262150, 64, 0, 262151, 64, 0, 262152, 64, 0, 262153, 64, 0, 262154, 64, 0, 262155, 52, 0, 262156, 50, 0, 262157, 62, 0, 262158, 62, 0, 262159, 62, 0, 262160, 62, 0, 262161, 62, 0, 262162, 62, 0, 262163, 62, 0, 262164, 62, 0, 262165, 62, 0, 262166, 62, 0, 327680, 63, 0, 327681, 64, 0, 327682, 64, 0, 327683, 64, 0, 327684, 64, 0, 327685, 64, 0, 327686, 64, 0, 327687, 64, 0, 327688, 64, 0, 327689, 64, 0, 327690, 64, 0, 327691, 64, 0, 327692, 62, 0, 327693, 62, 0, 327694, 62, 0, 327695, 62, 0, 327696, 62, 0, 327697, 62, 0, 327698, 62, 0, 327699, 62, 0, 327700, 62, 0, 327701, 62, 0, 327702, 62, 0, 327703, 61, 0, 393216, 63, 0, 393217, 64, 0, 393218, 64, 0, 393219, 64, 0, 393220, 64, 0, 393221, 64, 0, 393222, 64, 0, 393223, 64, 0, 393224, 64, 0, 393225, 64, 0, 393226, 64, 0, 393227, 64, 0, 393228, 62, 0, 393229, 62, 0, 393230, 62, 0, 393231, 62, 0, 393232, 62, 0, 393233, 62, 0, 393234, 62, 0, 393235, 62, 0, 393236, 62, 0, 393237, 62, 0, 393238, 62, 0, 458752, 63, 0, 458753, 64, 0, 458754, 64, 0, 458755, 64, 0, 458756, 64, 0, 458757, 64, 0, 458758, 64, 0, 458759, 64, 0, 458760, 64, 0, 458761, 64, 0, 458762, 64, 0, 458763, 64, 0, 458764, 62, 0, 458765, 62, 0, 458766, 62, 0, 458767, 62, 0, 458768, 62, 0, 458769, 62, 0, 458770, 62, 0, 458771, 62, 0, 458772, 62, 0, 458773, 62, 0, 458774, 62, 0, 524288, 63, 0, 524289, 64, 0, 524290, 64, 0, 524291, 64, 0, 524292, 64, 0, 524293, 64, 0, 524294, 64, 0, 524295, 64, 0, 524296, 64, 0, 524297, 64, 0, 524298, 64, 0, 524300, 62, 0, 524301, 62, 0, 524302, 62, 0, 524303, 62, 0, 524304, 62, 0, 524305, 62, 0, 524306, 62, 0, 524307, 62, 0, 524308, 62, 0, 524309, 62, 0, 524310, 62, 0 )

[node name="Carpet" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262146, 296, 0, 262147, 297, 0, 262148, 297, 0, 262149, 297, 0, 262150, 297, 0, 262151, 297, 0, 262152, 298, 0, 327682, 308, 0, 327683, 309, 0, 327684, 309, 0, 327685, 309, 0, 327686, 309, 0, 327687, 309, 0, 327688, 310, 0, 393218, 308, 0, 393219, 309, 0, 393220, 309, 0, 393221, 309, 0, 393222, 309, 0, 393223, 309, 0, 393224, 310, 0, 458754, 320, 0, 458755, 321, 0, 458756, 321, 0, 458757, 321, 0, 458758, 321, 0, 458759, 321, 0, 458760, 322, 0 )

[node name="Layer 2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 288, 0, 65537, 289, 0, 65541, 261, 0, 65542, 262, 0, 65543, 263, 0, 65544, 276, 0, 65545, 277, 0, 65548, 129, 0, 131072, 300, 0, 131073, 301, 0, 131074, 290, 0, 131075, 291, 0, 131076, 272, 0, 131077, 273, 0, 131078, 274, 0, 131079, 213, 0, 131080, 267, 0, 131081, 268, 0, 131084, 141, 0, 131087, 54, 0, 131088, 55, 0, 131089, 55, 0, 131090, 160, 0, 131091, 56, 0, 131093, 54, 0, 131094, 11, 0, 196608, 312, 0, 196609, 313, 0, 196610, 302, 0, 196611, 303, 0, 196612, 284, 0, 196613, 285, 0, 196614, 286, 0, 196615, 225, 0, 196616, 279, 0, 196617, 280, 0, 196620, 153, 0, 196623, 58, 0, 196624, 58, 0, 196625, 59, 0, 196626, 172, 0, 196627, 70, 0, 196629, 58, 0, 196630, 22, 0, 262149, 293, 0, 262150, 294, 0, 262159, 123, 0, 262160, 126, 0, 262161, 126, 0, 262162, 126, 0, 262163, 124, 0, 262166, 70, 0, 327685, 305, 0, 327686, 306, 0, 327695, 147, 0, 327696, 138, 0, 327697, 138, 0, 327698, 138, 0, 327699, 148, 0, 393216, 299, 0, 393220, 243, 0, 393221, 244, 0, 393222, 244, 0, 393223, 245, 0, 393226, 299, 0, 393231, 147, 0, 393232, 138, 0, 393233, 138, 0, 393234, 138, 0, 393235, 148, 0, 458752, 311, 0, 458756, 255, 0, 458757, 256, 0, 458758, 256, 0, 458759, 257, 0, 458762, 311, 0, 458767, 135, 0, 458768, 150, 0, 458769, 150, 0, 458770, 150, 0, 458771, 136, 0, 524288, 323, 0, 524298, 323, 0, 524300, 54, 0, 524301, 55, 0, 524302, 55, 0, 524303, 55, 0, 524304, 55, 0, 524305, 55, 0, 524306, 55, 0, 524307, 55, 0, 524308, 55, 0, 524309, 55, 0, 524310, 56, 0 )

[node name="Layer 2 2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 16, 165, 0, 18, 216, 0, 65551, 189, 0, 65552, 177, 0, 65554, 228, 0, 131093, 190, 0, 131094, 176, 0, 196630, 167, 0, 327696, 203, 0, 327697, 197, 0, 327698, 202, 0, 393232, 215, 0, 393233, 209, 0, 393234, 214, 0, 458772, 168, 0, 458773, 169, 0, 524308, 180, 0, 524309, 181, 0 )

[node name="Layer 3" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 97, 0, 2, 271, 0, 3, 226, 0, 4, 227, 0, 10, 86, 0, 11, 99, 0, 12, 87, 0, 22, 96, 0, 65536, 73, 0, 65538, 283, 0, 65539, 238, 0, 65540, 239, 0, 65555, 127, 0, 65558, 74, 0, 131072, 73, 0, 131075, 314, 0, 131079, 275, 0, 131082, 170, 0, 131087, 66, 0, 131088, 67, 0, 131089, 68, 0, 131091, 139, 0, 131094, 74, 0, 196608, 73, 0, 196615, 287, 0, 196618, 182, 0, 196630, 74, 0, 262144, 73, 0, 262150, 295, 0, 262166, 74, 0, 327680, 73, 0, 327686, 307, 0, 327696, 196, 0, 327697, 314, 0, 327698, 198, 0, 327702, 114, 0, 327703, 86, 0, 393216, 73, 0, 393232, 208, 0, 393234, 210, 0, 393238, 90, 0, 393239, 86, 0, 458752, 73, 0, 458774, 74, 0, 524288, 73, 0, 524298, 90, 0, 524299, 91, 0, 524300, 92, 0, 524302, 80, 0, 524303, 77, 0, 524304, 78, 0, 524310, 74, 0, 589824, 85, 0, 589825, 91, 0, 589826, 91, 0, 589827, 91, 0, 589828, 91, 0, 589829, 91, 0, 589830, 91, 0, 589831, 91, 0, 589832, 91, 0, 589833, 91, 0, 589834, 84, 0, 589836, 85, 0, 589837, 91, 0, 589838, 91, 0, 589839, 91, 0, 589840, 91, 0, 589841, 91, 0, 589842, 91, 0, 589843, 91, 0, 589844, 91, 0, 589845, 91, 0, 589846, 84, 0 )

[node name="KitchenCamera" type="Camera2D" parent="."]
position = Vector2( 336, 80 )
current = true

[node name="LivingRoomCamera" type="Camera2D" parent="."]
position = Vector2( 48, 80 )

[node name="LivingRoomCameraTrigger" type="Area2D" parent="."]
position = Vector2( -12, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LivingRoomCameraTrigger"]
position = Vector2( 185, 100 )
shape = SubResource( 1 )

[node name="KitchenCameraTrigger" type="Area2D" parent="."]
position = Vector2( 195, 96 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitchenCameraTrigger"]
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 229, 94 )

[connection signal="body_entered" from="LivingRoomCameraTrigger" to="." method="_on_LivingRoomCameraTrigger_body_entered"]
[connection signal="body_entered" from="KitchenCameraTrigger" to="." method="_on_KitchenCameraTrigger_body_entered"]
